[package]
name = "async-tun"
version = "0.7.2"
authors = ["Navid <yaa110@gmail.com>"]
edition = "2018"
homepage = "https://github.com/yaa110/async-tun"
repository = "https://github.com/yaa110/async-tun"
documentation = "https://docs.rs/async-tun"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Asynchronous allocation of TUN/TAP devices"
categories = ["asynchronous", "network-programming"]
keywords = ["tun", "tap", "async", "async-std", "tokio"]

[dependencies]
async-std = { version = "1.6", optional = true }
tokio = { version = "0.2", optional = true, features = ["fs", "io-util"] }
libc = "0.2"
nix = "0.18"

[dev-dependencies]
tokio = { version = "0.2", features = ["fs", "io-util", "rt-threaded", "macros"] }

[build-dependencies]
bindgen = "0.55"

[features]
default = ["async-std"]
