[package]
name = "async-tun"
version = "0.9.0"
authors = ["Navid <yaa110@gmail.com>"]
edition = "2018"
homepage = "https://github.com/yaa110/async-tun"
repository = "https://github.com/yaa110/async-tun"
documentation = "https://docs.rs/async-tun"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Asynchronous allocation of TUN/TAP devices using async-std"
categories = ["asynchronous", "network-programming"]
keywords = ["tun", "tap", "async", "async-std", "interface"]

[dependencies]
async-std = "1.8"
libc = "0.2"
mac_address = "1.1"
nix = "0.21"
